@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>shopping-cart</title>
+    <title>Poppo Convenience Store</title>
   </head>
   <body>
     <div id="root"></div>
