@@ -1,0 +1,5 @@
+/* home.module.css */
+
+.homeGif {
+    width: 800px;
+}
