@@ -6,7 +6,7 @@ const Navigation = () => {
     return (
         <div>
             <nav>
-                <Link to="/home">Home</Link> | <Link to="/shop">Shop</Link> | <Link to="/cart">Cart</Link>
+                <Link to="/home">Home</Link> | <Link to="/shop">Shop</Link> | <Link to="/cart">Cart (#)</Link>
             </nav>
         </div>
     );
